persist src and public for deploys

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,8 @@ jobs:
             paths:
               - Makefile
               - build
+              - src
+              - public
 
   deploy-dev:
     <<: *node
