enormous hack for deploys

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,9 @@ jobs:
         - add_ssh_keys:
             fingerprints:
               - "50:7f:39:f8:35:c1:6b:82:95:3f:e0:37:a7:c6:9e:93"
+        - run:
+            name: Keyscan (HACK)
+            command: ssh-keyscan -H apps.sebastiankade.com >> ~/.ssh/known_hosts
         - run: APP=seb-kade-stg make deploy
 
   deploy-prod:
@@ -50,6 +53,9 @@ jobs:
         - add_ssh_keys:
             fingerprints:
               - "50:7f:39:f8:35:c1:6b:82:95:3f:e0:37:a7:c6:9e:93"
+        - run:
+            name: Keyscan (HACK)
+            command: ssh-keyscan -H apps.sebastiankade.com >> ~/.ssh/known_hosts
         - run: make deploy
 
 workflows:
